--- a/sass/pages/_work.scss
+++ b/sass/pages/_work.scss
@@ -604,6 +604,7 @@ a.link.link--large {
           margin-bottom: $--spacing-xl;
           @include for-mobile() {
             grid-template-columns: 1fr;
+            grid-gap: $--spacing-s;
           }
           &:last-child {
             margin-bottom: 0;
@@ -843,25 +844,6 @@ a.link.link--large {
   .web-design.desktop-only {
     @include for-tablet() {
       padding-top: 0;
-    }
-  }
-}
-.back-to-top-btn-container.work {
-  .back-to-top-btn {
-    bottom: 150px;
-    right: 50px;
-    @include for-large-desktops() {
-      border: 1px solid $light-grey;
-    }
-    @include for-tablet() {
-      right: 0;
-      bottom: 145px;
-      border: 1px solid $light-grey;
-    }
-    @include for-mobile() {
-      right: 0;
-      bottom: 90px;
-      border: 1px solid $light-grey;
     }
   }
 }
